[package]
name = "i3kb"
version = "0.1.0"
authors = ["romdt"]
description = "Automatically sets the last used keyboard layout for the window in i3wm"
keywords = ["i3"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/romdt/i3kb"
homepage = "https://github.com/romdt/i3kb"
edition = "2021"

[dependencies]
i3ipc = "0.10.1"
xcb = { version = "1.4.0", features = ["xkb"] }
